fixing inline equation vertical positioning
git-svn-id: https://sdocml.googlecode.com/svn/trunk@125 a297bd5c-318b-11de-a996-7ff70a941223

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -3,19 +3,35 @@ a img           { border : none;
                 }
 
 
+div.par + div.par
+    {
+        padding-top : .5em;
+    }
+
 /* MATH */
-.math       {       width                   : 100%;
-                    font-style              : italic;
-                    color                   : blue;
-                    text-align : center;
-            }
-.m          {       margin-left             : .2em;
-                    margin-right            : .2em;
-                    display                 : inline;
-            }
-.m img      {
-                    vertical-align          : middle;
-            }
+.inline-math
+    {
+        display         : inline-block;
+        vertical-align  : baseline;
+    }
+.inline-math > div
+    {
+        display         : inline-block;
+        position        : relative;
+        vertical-align  : top;
+    }
+
+.math
+    {
+        width           : 100%;
+        font-style      : italic;
+        color           : blue;
+        text-align      : center;
+    }
+
+
+
+
 dt          {       font-weight             : bolder; }
 pre {       border                  : solid thin gray;
             background-color        : rgb(232,232,232);
