--- a/html/style/style.css
+++ b/html/style/style.css
@@ -1,336 +1,13 @@
 
-a img           { border : none;
-                }
 
-
-div.par + div.par
+.macro-ref-overview
     {
-        padding-top : .5em;
+        width : 80%;
+        border : solid thin blue;
+        margin : 1em;
+        padding : 1em;
     }
-
-/* MATH */
-.inline-math
-    {
-        display         : inline-block;
-        vertical-align  : baseline;
-    }
-.inline-math > div
-    {
-        display         : inline-block;
-        position        : relative;
-        vertical-align  : top;
-    }
-
-.math
-    {
-        width           : 100%;
-        font-style      : italic;
-        color           : blue;
-        text-align      : center;
-    }
-
-
-
-
-dt          {       font-weight             : bolder; }
-pre {       border                  : solid thin gray;
-            background-color        : rgb(232,232,232);
-            padding                 : 1em;
-            margin                  : 0em 1em 1em 1em;
-            font-family             : monospace;
-            font-size               : small;
-    }
-
-
-
-.pre-header 
-    {   
-        margin          : 0em 1em 0em 1em;
-        text-align      : right;
-    }
-.pre-header-button-bar
-    {
-        display : inline-block;
-        position : relative;
-    }
-.pre-header-button
-    {
-        display : inline-block;
-        padding                 : 2px 1em 2px 1em;
-        border : solid thin gray;
-        background-color        : rgb(232,232,232);
-        border-bottom-style : none;
-        border-top-left-radius  : .5em 1em;  /* CSS3, but other browsers should just ignore it (?)*/
-        border-top-right-radius : .5em 1em; /* CSS3, but other browsers should just ignore it (?)*/
-        position : relative;
-        bottom : -1px;
-    }
-.pre-header-button a
+.macro-ref-overview a
     {
         text-decoration : none;
-        font-weight : bold;
-        font-family : sans-serif;
-        font-size : smaller;
     }
-
-.pre-header-button-spacer
-    {
-        width : .5em;
-        display : inline-block;
-    }
-
-
-.line-no
-            {
-                    font-size : smaller;
-                    color : gray;
-                    vertical-align : middle;
-            }
-
-
-dl.arglist dt
-            {       font-size               : larger; }
-
-
-
-/* CONTENTS */
-.float-right-element 
-            {       float                   : right; 
-                    margin                  : 1em;
-            }
-.float-left-element  
-            {       float                   : right;
-                    margin                  : 1em;
-            }
-.nofloat-element    
-            {       margin                  : 1em;
-            } 
-
-.float-content
-            {
-                    border : solid thin gray;
-            }
-.float-caption
-            {
-                    border-top              : solid thin rgb(200,200,200);
-                    font-weight             : bold;
-            }
-
-
-
-
-.table-head td
-            {
-                    background-color        : rgb(200,200,200);
-                    border                  : solid thin rgb(150,150,150);
-                    font-weight             : bold;
-            }
-.float-table td
-            {
-                    margin                  : 0;
-                    padding                 : 2px;
-            }
-.float-table 
-            {
-                    border                  : solid thin blue;
-                    background-color        : rgb(240,240,240);
-            }
-
-
-/* HEADINGS */
-.section-title
-            {
-                    font-family             : sans-serif;
-            }
-h1
-            {
-                    font-family             : sans-serif;
-                    text-align              : center;
-            }
-
-/* NAVIGATION */
-.navigation td
-            {
-                    vertical-align          : top;
-                    text-align              : right;
-                    font-weight             : normal;
-                    font-family             : sans-serif;
-                    font-size               : smaller;
-                    padding                 : 0em 1em 0em 1em;
-            }
-.navigation a
-            {
-                    text-decoration             : none;
-            }
-.navigation td.inactive
-            {
-                    color                   : rgb(240,240,240);
-            }
-
-.iconbar-navigation table
-            {
-                    width                       : 100%;
-            }
-
-.iconbar-navigation td.icon
-            {
-                    width                       : 1px;
-            }
-
-.iconbar-doctitle
-            {
-                    text-align                  : center;
-                    font-family                 : sans-serif;
-                    font-weight                 : bolder;
-            }
-
-/* MISC FLUFF */
-div.timestamp
-            {
-                    font-size               : 50%;
-                    text-align              : right;
-            }
-hr.content-delimiter
-            {
-            }
-
-td.author   {
-                    font-size               : smaller;
-            }
-
-.note-element
-            {
-                    float                   : right;
-                    width                   : 20em;
-                    margin                  : .5em;
-                    font-family             : sans-serif;
-                    font-size               : smaller;
-            }
-.note-content
-            {
-                    padding                 : .5em;
-                    border                  : dashed thin red;
-            }
-div.page-footer     
-            {     
-                    text-align                  : right; 
-                    color                       : gray; 
-                    font-size                   : smaller;
-            }
-.toc        {       font-family                 : sans-serif;
-            }
-.toc a      {
-                    text-decoration             : none;
-            }
-.toc ul     {       list-style-type             : none;
-            }
-.node-file-header
-            {
-                    font-family                 : sans-serif;
-                    font-weight                 : bolder;
-            }
-.contents-level-2 
-            {
-                    font-size                   : smaller;
-            }
-
-/* Index style */
-.index-summary
-            {
-                    text-align                  : center;
-                    font-weight                 : bolder;
-                    font-family                 : sans-serif;
-            }
-.index-list
-            {
-                    margin                      : 5em;
-            }
-.index-list ul
-            {
-                    list-style-type             : none;
-            }
-.index-letter
-            {
-                    border : solid medium gray;
-                    border-style : solid none none none;
-            }
-
-#top-level-content-table
-                    {
-                            border-spacing : 0px;
-                    }
-
-#sidebar-cell       {       vertical-align : top;
-                            margin : 0px;
-                            padding : 0px;
-                    }
-#sidebar-area       {       vertical-align : top;
-                            padding : 3px;
-                            height : 100%;
-                    }
-.sidebar-head-cell  {       font-weight : bolder; 
-                            padding : 2px 5px 2px 5px;
-                            border : solid medium;
-                            border-color : rgb(240,240,240) rgb(240,240,240) rgb(220,220,220) rgb(220,220,220);
-                            background-color : rgb(230,230,230);
-                    }
-.sidebar-table-cell {       font-size : x-small; 
-                            font-family : sans-serif;
-                    }
-.sidebar-table-cell a {     text-decoration : none; }
-.sidebar-head-sep   {       padding : 0px 5px 0px 0px; }
-#sidebar-divider-cell 
-                    {       background-color : rgb(220,220,220);
-                            width : 8px; 
-                            margin : 0px;
-                            padding : 0px;
-                    }
-
-#sidebar-contents   {   padding-left : 0.5em; /* to make space for the buttons*/
-                    }
-.sidebar-contents-list
-                    {       list-style-type : none;
-                            padding-left : 10px;
-                            margin-left : 0px;
-                    }
-.sidebar-contents-list li
-                    {       padding-top : 3px;
-                    }
-.sidebar-content-list-button-div 
-                    {       width               : 0px; 
-                            text-align          : right;}
-.sidebar-index-list {       list-style-type     : none;
-                            padding-left        : 0.5em;
-                            margin-left         : 0px;
-                    }
-#content            {       vertical-align : top;
-                            padding : 4px;
-                            width : 100%;
-                    }
-body                {       margin : 0px; padding : 0px; height : 100%;
-                    }
-#main-div           {  height : 100%; width : 100%; }
-#content-div        {  height : 100%; width : 100%; border : solid thin red;}
-.navigation-top     { background-color : rgb(220,220,220);}
-.navigation-bottom  { background-color : rgb(220,220,220);}
-
-
-
-/* Language syntax hilighting stuff */
-.language-syntax-keyword 
-                    {
-                            color       : blue;
-                            font-weight : bolder;
-                    }
-.language-syntax-comment 
-                    {
-                            color       : rgb(127,0,0); 
-                            font-style  : italic; 
-                    }
-.language-syntax-string 
-                    {       color       : #804000;}
-.language-syntax-language 
-                    {
-                            color       : black; 
-                            font-weight : bolder;
-                    }
